--- a/package.json
+++ b/package.json
@@ -5,24 +5,24 @@
     "private": true,
     "dependencies": {
         "@tailwindcss/typography": "^0.5.9",
-        "lucide-react": "^0.263.1",
+        "lucide-react": "^0.244.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-scripts": "^3.0.1",
-        "tailwindcss": "^3.3.0"
+        "react-scripts": "^3.0.1"
     },
     "scripts": {
-        "predeploy": "npm run build",
-        "deploy": "gh-pages -d build",
-        "start": "react-scripts start",
-        "build": "react-scripts build",
+        "start": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
+        "build": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "predeploy": "set NODE_OPTIONS=--openssl-legacy-provider && npm run build",
+        "deploy": "gh-pages -d build"
     },
     "devDependencies": {
-        "autoprefixer": "^10.4.14",
+        "autoprefixer": "^10.4.20",
         "gh-pages": "^5.0.0",
-        "postcss": "^8.4.27"
+        "postcss": "^8.5.1",
+        "tailwindcss": "^3.4.17"
     },
     "browserslist": {
         "production": [
