--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "dev-portfolio",
     "version": "0.1.0",
-    "homepage": "https://yourusername.github.io",
+    "homepage": "https://hnaamdev41.github.io",
     "private": true,
     "dependencies": {
         "@tailwindcss/typography": "^0.5.9",
