--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     },
     "scripts": {
         "start": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
-        "build": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
+        "build": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts build && npx tailwindcss -o ./build/styles.css --minify",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
         "predeploy": "set NODE_OPTIONS=--openssl-legacy-provider && npm run build",
