--- a/package.json
+++ b/package.json
@@ -4,36 +4,42 @@
     "homepage": "https://hnaamdev41.github.io",
     "private": true,
     "dependencies": {
-        "@tailwindcss/typography": "^0.5.9",
-        "lucide-react": "^0.244.0",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-scripts": "^3.0.1"
+      "@tailwindcss/typography": "^0.5.9",
+      "lucide-react": "^0.244.0",
+      "react": "^18.2.0",
+      "react-dom": "^18.2.0",
+      "react-scripts": "5.0.1"
     },
     "scripts": {
-        "start": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
-        "build": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts build && npx tailwindcss -o ./build/styles.css --minify",
-        "test": "react-scripts test",
-        "eject": "react-scripts eject",
-        "predeploy": "set NODE_OPTIONS=--openssl-legacy-provider && npm run build",
-        "deploy": "gh-pages -d build"
+      "predeploy": "npm run build",
+      "deploy": "gh-pages -d build",
+      "start": "react-scripts start",
+      "build": "react-scripts build",
+      "test": "react-scripts test",
+      "eject": "react-scripts eject"
     },
-    "devDependencies": {
-        "autoprefixer": "^10.4.20",
-        "gh-pages": "^5.0.0",
-        "postcss": "^8.5.1",
-        "tailwindcss": "^3.4.17"
+    "eslintConfig": {
+      "extends": [
+        "react-app",
+        "react-app/jest"
+      ]
     },
     "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
-        ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
+      "production": [
+        ">0.2%",
+        "not dead",
+        "not op_mini all"
+      ],
+      "development": [
+        "last 1 chrome version",
+        "last 1 firefox version",
+        "last 1 safari version"
+      ]
+    },
+    "devDependencies": {
+      "autoprefixer": "^10.4.14",
+      "gh-pages": "^5.0.0",
+      "postcss": "^8.4.23",
+      "tailwindcss": "^3.3.2"
     }
-}
+  }
